# spika-marznode

./: .env.example  .gitignore  Dockerfile  Dockerfile.staging  Makefile  compose.preprod.yml  compose.staging.yml  compose.voyra-preprod.yml  compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml  release.yml  test.yml
marznode/: config.py  marznode.py  startup_checks.py  traffic.py
marznode/backends/singbox/: _accounts.py  _config.py  _runner.py  singbox_backend.py
marznode/backends/xray/: _config.py  _utils.py  xray_backend.py
marznode/models/: __init__.py  outbound.py  user.py
marznode/service/: service.proto  service.py  service_grpc.py  service_pb2.py  service_pb2.pyi
marznode/storage/: __init__.py  base.py  memory.py  sqlite.py
tests/: conftest.py  test_compose_healthcheck.py  test_compose_image_pin.py  test_config.py  test_marznode_main.py  test_node_outbound_policies.py  test_reality_short_id.py  test_service_repopulate.py  test_singbox_runner.py  test_sqlite_schema_migrate.py  test_sqlite_storage.py  test_startup_checks.py  test_traffic_monitor.py  test_xray_user_outbounds.py  test_xray_watchdog.py
tests/backends/: test_abstract_backend_contract.py  test_hysteria_backend.py  test_singbox_accounts.py  test_singbox_config.py  test_xray_config.py
tests/fixtures/: singbox_minimal.json  xray_minimal.json  xray_reality.json
tests/models/: test_models.py
tests/service/: test_marz_service.py
tests/storage/: test_sqlite_storage.py  test_storage_parity.py
tests/utils/: test_key_gen.py  test_network.py  test_ssl.py
